--- a/PresentationGambleA/PresentationGambleA.csproj
+++ b/PresentationGambleA/PresentationGambleA.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\GambleBusiness\GambleBusiness.csproj" />
+  </ItemGroup>
+
 </Project>
